--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 OPENAI_API_KEY=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
+OPENAI_API_BASE_URL=https://api.openai.com/v1
+OPENAI_DEFAULT_MODEL=gpt-4-turbo
